Edited wiki page through web user interface.

--- a/wiki/DebootstrapInstructions.wiki
+++ b/wiki/DebootstrapInstructions.wiki
@@ -1,4 +1,5 @@
 #summary How to install Debian using debootstrap
+#labels Featured
 
 = Installing sid from knoppix or any other Debian live CD = 
 
